--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul><li><a href="index.html">Home</a></li></ul>
         <ul>
           
-          <li><a href="Assignment%203.html">Assignment 3 part 2</a></li>
+          <li><a href="Assighment%203%20part%202.html">Assignment 3 part 2</a></li>
            <li><a href="Assignment%203.html">Assignment 3</a></li>
             <li><a href="Assignment%202.html">Assignment 2</a></li>
             <li><a href="Assignment%201.html"> Assignment 1</a></li>
