--- a/Assignment 2.html
+++ b/Assignment 2.html
@@ -6,7 +6,7 @@
       <title> headass elliott</title>
    </head>
    <div class= "form">
-   <body>
+   <body background= "memexd.jpg">
       <div class= "one">
          What the fuck did you just fucking say about me, you little bitch? I’ll have you know I graduated top of my class in the Navy Seals, and I’ve been involved in numerous secret raids on Al-Quaeda
       </div>
