--- a/Assignment 1.html
+++ b/Assignment 1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8">
 <title> Teacher Blucksy is a woman got em</title>
 <body background = "download.jpg">
 <h1>><font color="yellow"> Me llamo es jeff</h1>
