--- a/Assignment 3.html
+++ b/Assignment 3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+        <meta charset="utf-8">
    <link rel="stylesheet" type = "text/css" href = "style.css">
     
 <body>
@@ -19,29 +20,6 @@ Hello world
 Hello world
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </div>
