--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <nav>
         <ul><li><a href="index.html">Home</a></li></ul>
         <ul>
-          
+             <li><a href="Assignment%205%20part%202.html">Assignment 5 part 2</a></li>
+             <li><a href="Assignment%205%20part%201.html">Assignment 5 part 1</a></li>
+           <li><a href="Assignment%204.html">Assignment 4</a></li>
           <li><a href="Assighment%203%20part%202.html">Assignment 3 part 2</a></li>
            <li><a href="Assignment%203.html">Assignment 3</a></li>
             <li><a href="Assignment%202.html">Assignment 2</a></li>
